Convert rest to of nav links to use new style. Fix margin overriding. Fix spacing between li.

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ img {
 	height: 40px;
 	width: 40px;
 	
-	margin: 0 15px;
+	margin-left: 15px;
+	margin-right: 15px;
 
 	background: #fff;
 
@@ -59,7 +60,8 @@ img {
 }
 
 #sidebar .selected {
-	margin: 0 12px;
+	margin-top: 12px;
+	margin-bottom: 12px;
 
 	border: solid #ffc11f 3px;
 
@@ -96,6 +98,8 @@ img {
 	list-style-type: none;
 
 	margin: 7px 0;
+
+	display: inline-block;
 }
 
 #sidebar li:first-child {
